--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bitcoin-explorer",
   "version": "1.0.0",
-  "description": "Secure Systems Development - A simple Bitcoin Blockchain Explorer",
+  "description": "Secure Systems Development - Bitcoin Blockchain Explorer",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "dns": "^0.2.2",
+    "dotenv": "^16.4.5",
     "net": "^1.0.2"
   },
   "devDependencies": {
