Implemented Version message and helper functions - Researched and documented Bitcoin Network messaging: Version, Verak, Header - Created helper functions:       - intToLittleEndian: Convert ints to little endian buffer       - ipToBuffer: 4 Byte IPv4 address to 16 Byte IPv6 address buffer

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 
 BTC_PORT = 8333 # Bitcoin mainnet port
 DNS_SEED = seed.bitcoin.sipa.be # DNS server - returns IP addresses of bitcoin nodes
+MAGIC_NUMBER = F9BEB4D9 # Bitcoin Network
