--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "net": "^1.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "chalk": "^4.1.2",
+    "nodemon": "^3.1.0",
+    "winston": "^3.13.0"
   }
 }
