Inv and Get Data - Created 'inv' and 'getData' classes and logic - Updated messageService with getData - Updated messageHandler to parse 'inv' and send 'getData' response - General refactoring and cleanup

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dns": "^0.2.2",
     "dotenv": "^16.4.5",
     "ip": "^2.0.1",
-    "net": "^1.0.2"
+    "net": "^1.0.2",
+    "varint": "^6.0.0"
   },
   "devDependencies": {
     "chalk": "^4.1.2",
