Major Update and Refactor: WebSocket + Server-side Overhaul
- Socket.io for real time streaming of BTC data to the frontend
- Moved and updated server logic from index.js to app.js
- Created and styled the frontend interface

--- a/.env
+++ b/.env
@@ -1,4 +1,12 @@
 
+PORT = 3000
 BTC_PORT = 8333 # Bitcoin mainnet port
+BTC_ADDRESSES = 104.199.56.247, 104.199.56.247, 104.199.56.247, 104.199.56.247, 217.15.161.228
 DNS_SEED = seed.bitcoin.sipa.be # DNS server - returns IP addresses of bitcoin nodes
 MAGIC_NUMBER = F9BEB4D9 # Bitcoin Network
+
+
+# ['104.199.56.247', '104.199.56.247', '104.199.56.247', '104.199.56.247', '217.15.161.228' ]; 
+# [ '217.155.244.170','217.15.178.11', '35.204.253.254', '192.36.61.202','217.15.163.218', '217.15.165.137', '35.195.212.194' ] 
+# ['185.52.93.45', '109.78.18.149', '193.203.147.81', '80.111.142.213',  ] 
+# ['104.199.56.247', '192.36.61.202', '217.15.161.228', '217.15.163', '217.15.163.218' ] 
