--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "Secure Systems Development - Bitcoin Blockchain Explorer",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dns": "^0.2.2",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "ip": "^2.0.1",
     "net": "^1.0.2",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "varint": "^6.0.0"
   },
   "devDependencies": {
